force-app/main/default/objects/ET_Monthly_Reports__c/ET_Monthly_Reports__c.object-meta.xml
<CustomObject>
    <description>Enterprise Toronto&#39;s manual reports for client interactions at its three offices.</description>
    <label>Monthly_Report</label>
    <nameField>
        <displayFormat>ET-OfficeReports-{00000}</displayFormat>
        <label>ET Reports</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly_Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>