force-app/main/default/objects/ET_Monthly_Reports__c/fields/ET_Location__c.field-meta.xml
<CustomField>
    <fullName>ET_Location__c</fullName>
    <label>ET Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>City Hall</fullName>
            </value>
            <value>
                <fullName>North York</fullName>
            </value>
            <value>
                <fullName>Scarborough</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>