force-app/main/default/objects/ET_Monthly_Reports__c/fields/ET_Staff_Member__c.field-meta.xml
<CustomField>
    <fullName>ET_Staff_Member__c</fullName>
    <label>ET Staff Member</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angie Bellanza</fullName>
            </value>
            <value>
                <fullName>Gracie Worrall</fullName>
            </value>
            <value>
                <fullName>Jason Li</fullName>
            </value>
            <value>
                <fullName>Karen Keskull</fullName>
            </value>
            <value>
                <fullName>Margie Galarneau</fullName>
            </value>
            <value>
                <fullName>Vikas Jain</fullName>
            </value>
            <value>
                <fullName>Felicity Scherk</fullName>
            </value>
            <value>
                <fullName>Brent Poulton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>