force-app/main/default/objects/ET_Monthly_Reports__c/fields/of_French_Inquiries__c.field-meta.xml
<CustomField>
    <fullName>of_French_Inquiries__c</fullName>
    <label># of French Inquiries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>