force-app/main/default/objects/ET_Monthly_Reports__c/fields/of_Phone_Calls__c.field-meta.xml
<CustomField>
    <fullName>of_Phone_Calls__c</fullName>
    <label># of Phone Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>