force-app/main/default/objects/ET_Monthly_Reports__c/fields/of_Registrations__c.field-meta.xml
<CustomField>
    <fullName>of_Registrations__c</fullName>
    <label># of Registrations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>