force-app/main/default/objects/ET_Monthly_Reports__c/fields/of_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>of_Social_Media__c</fullName>
    <label># of Social Media</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>