force-app/main/default/objects/ET_Monthly_Reports__c/fields/of_Walk_Ins__c.field-meta.xml
<CustomField>
    <fullName>of_Walk_Ins__c</fullName>
    <label># of Walk-Ins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>