force-app/main/default/objects/ET_Monthly_Reports__c/fields/of_Web_Views__c.field-meta.xml
<CustomField>
    <fullName>of_Web_Views__c</fullName>
    <label># of Web Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>