force-app/main/default/objects/ET_Monthly_Reports__c/fields/of_Web_Visitors__c.field-meta.xml
<CustomField>
    <fullName>of_Web_Visitors__c</fullName>
    <label># of Web Visitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>