force-app/main/default/objects/ET_Monthly_Reports__c/fields/Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Date__c</fullName>
    <description>Date that they&#39;re reporting for.</description>
    <label>Reporting Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>