force-app/main/default/objects/ET_Monthly_Reports__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ET_Staff_Member__c</columns>
    <columns>NAME</columns>
    <columns>Reporting_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <roleAndSubordinates>EDC_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_ET</roleAndSubordinates>
    </sharedTo>
</ListView>